# workflows_test

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  host.json  pyproject.toml  requirements.in  requirements.txt  sonar-project.properties  sonarqube.yaml
.github/: dependabot.yml
.github/workflows/: build.yaml  checks.yaml  ci-cd.yaml  ci_cd.yaml  cicd.yaml  deploy.yaml  sonarqube.properties.json  sonarqube.yaml  sonarqube.yml
notebooks/: Load Results.py  testapi.py
scripts/: test_set_inference_script.py
src/idr/: api.py  config.py  logic.py
src/idr/document/: __init__.py  document.py  invoice_items.py  pdf_reader.py  processing.py  qr_codes.py  utils.py
src/idr/llm/: __init__.py  classification_prompts.py  extraction_prompts.py  llm_caller.py  openai_config.py  prompt_formatting.py
src/idr/storage/: blobs.py
tests/: test_integration.py  test_invoice_items.py  test_qr.py
